[package]
name = "iron-gcd"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#colorowe println! --
colored = "1.6"
crossbeam = "0.2.8"
image = "0.13.0"
# liczby zespolone 2.2
num = "0.1.27"
rayon = "1"

